// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shared: data-core: interfaces: TodoTask should create a TodoTaskSimple entity 1`] = `
Object {
  "_formFields": Array [
    Object {
      "filterName": "text",
      "name": "text",
      "required": true,
      "title": "DESCRIPTION",
      "type": "textarea",
    },
    Object {
      "clearable": true,
      "collectionName": "user",
      "extraButton": Object {
        "buttons": Array [
          Object {
            "handler": [Function],
            "text": "ME",
          },
        ],
        "title": "ASSIGNTO",
      },
      "filterName": "userRef",
      "multiple": false,
      "name": "user",
      "queryFields": Array [
        "_id",
        "imageData",
        "firstName",
        "lastName",
        "email",
        "telephone",
        "username",
      ],
      "required": true,
      "title": "ASSIGNTO",
      "type": "autocomplete",
    },
    Object {
      "clearable": true,
      "filterName": "duedate",
      "minDate": "2000-01-01T00:00:00.000Z",
      "name": "duedate",
      "required": false,
      "title": "DUEDATE",
      "type": "date",
    },
    Object {
      "filterName": "hasphoto",
      "flex": 50,
      "name": "hasphoto",
      "required": false,
      "title": "ASKFORPHOTO",
      "type": "toggle",
    },
    Object {
      "condition": "hasphoto.value==1",
      "filterName": "isphotorequired",
      "flex": 50,
      "name": "isphotorequired",
      "required": false,
      "title": "MANDATORYPHOTO",
      "type": "toggle",
    },
    Object {
      "condition": "hasphoto.value==1",
      "filterName": "allowLibrary",
      "flex": 50,
      "name": "allowLibrary",
      "required": false,
      "title": "ALLOWLIBRARY",
      "type": "toggle",
    },
  ],
  "appareance": Map {},
  "className": "TodoTaskSimple",
  "collectionName": undefined,
  "feathersService": undefined,
  "fields": undefined,
  "include": undefined,
  "isCustom": undefined,
  "mappingFields": Map {},
  "searchSubquery": undefined,
  "searchableFields": Array [],
  "type": [Function],
}
`;

exports[`shared: data-core: interfaces: TodoTask should create a todo task entity 1`] = `
Object {
  "_formFields": Array [
    Object {
      "filterName": "text",
      "name": "text",
      "required": true,
      "title": "TITLE",
      "type": "text",
    },
    Object {
      "filterName": "comments",
      "name": "comments",
      "required": false,
      "title": "COMMENTS",
      "type": "textarea",
    },
    Object {
      "clearable": true,
      "filterName": "duedate",
      "minDate": "2000-01-01T00:00:00.000Z",
      "name": "duedate",
      "required": false,
      "title": "DUEDATE",
      "type": "date",
    },
    Object {
      "filterName": "hasphoto",
      "flex": 50,
      "name": "hasphoto",
      "required": false,
      "title": "PHOTO",
      "type": "toggle",
    },
    Object {
      "condition": "hasphoto.value==1",
      "filterName": "isphotorequired",
      "flex": 50,
      "name": "isphotorequired",
      "required": false,
      "title": "MANDATORYPHOTO",
      "type": "toggle",
    },
    Object {
      "condition": "hasphoto.value==1",
      "filterName": "allowLibrary",
      "flex": 50,
      "name": "allowLibrary",
      "required": false,
      "title": "ALLOWLIBRARY",
      "type": "toggle",
    },
  ],
  "appareance": Map {},
  "className": "TodoTask",
  "collectionName": undefined,
  "feathersService": undefined,
  "fields": undefined,
  "include": undefined,
  "isCustom": undefined,
  "mappingFields": Map {},
  "searchSubquery": undefined,
  "searchableFields": Array [],
  "type": [Function],
}
`;
